// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`align defaults to left 1`] = `
<td
  class="kuiTableRowCell"
>
  <div
    class="kuiTableRowCell__content"
  />
</td>
`;

exports[`align renders right when specified 1`] = `
<td
  class="kuiTableRowCell kuiTableRowCell--alignRight"
>
  <div
    class="kuiTableRowCell__content"
  />
</td>
`;

exports[`renders KuiTableRowCell 1`] = `
<td
  aria-label="aria-label"
  class="kuiTableRowCell testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="kuiTableRowCell__content"
  >
    children
  </div>
</td>
`;

exports[`wrapText is rendered when specified 1`] = `
<td
  class="kuiTableRowCell kuiTableRowCell--wrapText"
>
  <div
    class="kuiTableRowCell__content"
  />
</td>
`;
